# tox-split-message

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
lib/: CMakeLists.txt
lib/include/: tox_split_message.h
lib/src/: tox_split_message.c
test/: CMakeLists.txt  main.c
